fixed broken links

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </section>
 
     <section class="main-content">
-      <p>Documentation of framework usage - <a href="http://atrifan.github.io/docs/usage/html/client_framework.html">Starting CliFJS</a></p>
+      <p>Documentation of framework usage - <a href="http://atrifan.github.io/usage/html/client_framework.html">Starting CliFJS</a></p>
 
-<p>Dev docs - <a href="http://atrifan.github.io/docs/dev/index.html">Dev Docs</a></p>
+<p>Dev docs - <a href="http://atrifan.github.io/dev/index.html">Dev Docs</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/atrifan/CliFJS">Clifjs</a> is maintained by <a href="https://github.com/atrifan">atrifan</a>.</span>
