fixed broken links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </section>
 
     <section class="main-content">
-      <p>Documentation of framework usage - <a href="http://atrifan.github.io/usage/html/client_framework.html">Starting CliFJS</a></p>
+      <p>Documentation of framework usage - <a href="http://atrifan.github.io/usage/index.html">Starting CliFJS</a></p>
 
 <p>Dev docs - <a href="http://atrifan.github.io/dev/index.html">Dev Docs</a></p>
 
